--- a/Homework6/index.html
+++ b/Homework6/index.html
@@ -89,7 +89,7 @@
         </div>
         <div>
             <a href="https://github.com/tgh1701/C4EJS131-Nhom3-TruongGiaHien" target="_blank" id="button">
-                <span>Show all ></span>
+                <span>Show all <i class="fa fa-angle-right"></i></span>
             </a>
         </div>
     </section>
