--- a/Homework3/LAB2.html
+++ b/Homework3/LAB2.html
@@ -1,61 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đăng ký thông tin tài khoản người dùng</title>
-</head>
-<style>
+  </head>
+  <style>
     input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button { 
-        -webkit-appearance: none;
-        margin: 0;
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
     }
-    h1{text-align: center;}
-    form{text-align: center;}
-</style>
-<body>
+    h1 {
+      text-align: center;
+    }
+    form {
+      text-align: center;
+    }
+  </style>
+  <body>
     <h1>Đăng ký thông tin tài khoản người dùng</h1>
     <form>
-        <label for="id">Tên đăng nhập:</label><br>
-        <input type="text" id="id" name="id"><br>
-        <label for="password">Mật khẩu:</label><br>
-        <input type="password" id="password" name="password"><br>
-        <label for="password">Nhập lại mật khẩu:</label><br>
-        <input type="password" id="password" name="password"><br>
-        <label for="lname">Họ và tên:</label><br>
-        <input type="text" id="lname" name="lname" placeholder="Nguyễn Văn A"><br>
-        <label for="age">Tuổi:</label><br>
-        <input type="number" id="age" name="age" min="0"><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" placeholder="example@gmail.com"><br>
-        <label for="phone">Số điện thoại:</label><br>
-        <input type="number" id="phone" name="phone"><br>
-        <label for="jobs">Nghề nghiệp:</label><br>
-        <input type="text" id="jobs" name="jobs"><br>
-        <label for="gender">Giới tính:</label><br>
-        <input type="radio" id="male" name="fav_language" value="male">
-        <label for="male">Nam</label><br>
-        <input type="radio" id="female" name="fav_language" value="female">
-        <label for="female">Nữ</label><br>
-        <label for="date">Ngày sinh:</label><br>
-        <input type="date" id="date" name="date"><br>
-        <label for="national">Quốc tịch:</label><br>
-        <select name="national" id="national">
-            <option value="VietNam">Việt Nam</option>
-            <option value="China">Trung Quốc</option>
-            <option value="Thailand">Thái Lan</option>
-            <option value="Laos">Lào</option>
-            <option value="Campuchia">Campuchia</option>
-            <option value="Japan">Nhật Bản</option>
-            <option value="USA">Mỹ</option>
-            <option value="England">Anh</option>
-            <option value="Korea">Hàn Quốc</option>
-            <option value="Netherlands">Hà Lan</option>
-            <option value="Poland">Ba Lan</option>
-        </select><br>
-        <input type="submit" value="Đăng ký"><br>
-      </form>
-</body>
+      <label for="id">Tên đăng nhập:</label><br />
+      <input type="text" id="id" name="id" /><br />
+      <label for="password">Mật khẩu:</label><br />
+      <input type="password" id="password" name="password" /><br />
+      <label for="password">Nhập lại mật khẩu:</label><br />
+      <input type="password" id="password" name="password" /><br />
+      <label for="lname">Họ và tên:</label><br />
+      <input
+        type="text"
+        id="lname"
+        name="lname"
+        placeholder="Nguyễn Văn A"
+      /><br />
+      <label for="age">Tuổi:</label><br />
+      <input type="number" id="age" name="age" min="0" /><br />
+      <label for="email">Email:</label><br />
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="example@gmail.com"
+      /><br />
+      <label for="phone">Số điện thoại:</label><br />
+      <input type="number" id="phone" name="phone" /><br />
+      <label for="jobs">Nghề nghiệp:</label><br />
+      <input type="text" id="jobs" name="jobs" /><br />
+      <label for="gender">Giới tính:</label><br />
+      <input type="radio" id="male" name="fav_language" value="male" />
+      <label for="male">Nam</label><br />
+      <input type="radio" id="female" name="fav_language" value="female" />
+      <label for="female">Nữ</label><br />
+      <label for="date">Ngày sinh:</label><br />
+      <input type="date" id="date" name="date" /><br />
+      <label for="national">Quốc tịch:</label><br />
+      <select name="national" id="national">
+        <option value="VietNam">Việt Nam</option>
+        <option value="China">Trung Quốc</option>
+        <option value="Thailand">Thái Lan</option>
+        <option value="Laos">Lào</option>
+        <option value="Campuchia">Campuchia</option>
+        <option value="Japan">Nhật Bản</option>
+        <option value="USA">Mỹ</option>
+        <option value="England">Anh</option>
+        <option value="Korea">Hàn Quốc</option>
+        <option value="Netherlands">Hà Lan</option>
+        <option value="Poland">Ba Lan</option></select
+      ><br />
+      <input type="submit" value="Đăng ký" /><br />
+    </form>
+  </body>
 </html>
